Add basic GitHub provider functionality

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       context: .
     environment:
       - GITHUB_TOKEN=${GITHUB_TOKEN}
+      - GITHUB_ORGANIZATION=${GITHUB_ORGANIZATION}
       - ENV=dev
     volumes:
       - go-tools:/go/bin
