Add Docker read-only mount for AWS and SSH configurations

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,5 @@ services:
     volumes:
       - go-tools:/go/bin
       - ${KUBECONFIG}:/root/.kube/:ro
+      - ~/.aws/:/root/.aws/:ro
+      - ~/.ssh/:/root/.ssh/:ro
